--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -29,7 +29,7 @@ management:
     web:
       exposure:
         include: "*"
-      base-path: /riggs
+      base-path: /riggs/admin
   endpoint:
     health:
       show-details: always
