--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,9 +18,13 @@ spring:
     show-sql: true
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://localhost:3306/riggs
-    username: root
-    password: developer
+    url: ${DB_HOST}
+    username: {DB_USER}
+    password: ${DB_PW}
+#  datasource:
+#    url: jdbc:mysql://localhost:3306/riggs
+#    username: root
+#    password: developer
 
 
 management:
