--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
     generate-ddl: true
   datasource:
     url: ${DB_HOST}
-    username: {DB_USER}
+    username: ${DB_USER}
     password: ${DB_PW}
 #  datasource:
 #    url: jdbc:mysql://localhost:3306/riggs
