--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -18,7 +18,7 @@ spring:
     show-sql: true
     generate-ddl: true
   datasource:
-    url: jdbc:mysql://mysql-riggs:3306
+    url: jdbc:mysql-riggs:3306
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
 #  datasource:
