--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -19,7 +19,7 @@ spring:
     generate-ddl: true
     database: mysql
   datasource:
-    url: jdbc:mysql-vuby:3306
+    url: jdbc://mysql-riggs:3306
     username: ${MYSQL_USER}
     password: ${MYSQL_PASSWORD}
     driver-class-name: com.mysql.cj.jdbc.Driver
